--- a/kernel-aarch64-debug-fedora.config
+++ b/kernel-aarch64-debug-fedora.config
@@ -722,6 +722,8 @@ CONFIG_AXP20X_POWER=m
 CONFIG_AXP288_ADC=m
 CONFIG_AXP288_CHARGER=m
 CONFIG_AXP288_FUEL_GAUGE=m
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 CONFIG_B43_BCMA_PIO=y
 CONFIG_B43_BCMA=y
 CONFIG_B43_BUSES_BCMA_AND_SSB=y
@@ -945,6 +947,7 @@ CONFIG_BME680=m
 # CONFIG_BMI088_ACCEL is not set
 CONFIG_BMI160_I2C=m
 CONFIG_BMI160_SPI=m
+# CONFIG_BMI260 is not set
 CONFIG_BMI270_I2C=m
 CONFIG_BMI270_SPI=m
 # CONFIG_BMI323_I2C is not set
@@ -2117,6 +2120,7 @@ CONFIG_DRM_DW_HDMI_QP=m
 CONFIG_DRM_DW_MIPI_DSI=m
 CONFIG_DRM_ETNAVIV=m
 CONFIG_DRM_ETNAVIV_THERMAL=y
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -2687,6 +2691,7 @@ CONFIG_F2FS_FS_ZSTD=y
 CONFIG_F2FS_IOSTAT=y
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
+# CONFIG_FACETIMEHD is not set
 CONFIG_FAIL_FUNCTION=y
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAIL_IO_TIMEOUT=y
@@ -2918,6 +2923,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 CONFIG_FXAS21002C=m
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2930,6 +2936,7 @@ CONFIG_GAMEPORT_FM801=m
 CONFIG_GAMEPORT_L4=m
 CONFIG_GAMEPORT=m
 CONFIG_GAMEPORT_NS558=m
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -2962,6 +2969,7 @@ CONFIG_GOOGLE_COREBOOT_TABLE=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
@@ -4285,6 +4293,7 @@ CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
 # CONFIG_KUNPENG_HCCS is not set
 CONFIG_KUSER_HELPERS=y
+# CONFIG_KVFM is not set
 CONFIG_KVM_MAX_NR_VCPUS=4096
 CONFIG_KVM_PROVE_MMU=y
 CONFIG_KVM_SMM=y
@@ -4423,6 +4432,7 @@ CONFIG_LEDS_USER=m
 CONFIG_LED_TRIGGER_PHY=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_LEGACY_TIOCSTI is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
 CONFIG_LIBERTAS_THINFIRM=m
@@ -5278,6 +5288,7 @@ CONFIG_NATSEMI=m
 CONFIG_NCN26000_PHY=m
 CONFIG_NCSI_OEM_CMD_GET_MAC=y
 CONFIG_NCSI_OEM_CMD_KEEP_PHY=y
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -6870,6 +6881,7 @@ CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
 CONFIG_RAVB=m
 # CONFIG_RAVE_SP_CORE is not set
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_RCAR_DMAC is not set
 # CONFIG_RCAR_GEN3_THERMAL is not set
@@ -7406,6 +7418,8 @@ CONFIG_RZG2L_THERMAL=m
 # CONFIG_RZ_MTU3 is not set
 CONFIG_S2IO=m
 CONFIG_S32G_WDT=m
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 CONFIG_SA_CAMCC_8775P=m
 CONFIG_SA_DISPCC_8775P=m
 CONFIG_SA_GCC_8775P=y
@@ -10147,6 +10161,7 @@ CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 # CONFIG_UV_SYSFS is not set
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
+# CONFIG_V4L2LOOP is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_V4L_TEST_DRIVERS=y
@@ -10193,6 +10208,7 @@ CONFIG_VFIO_PLATFORM=m
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_ARB=y
 # CONFIG_VGA_CONSOLE is not set
+# CONFIG_VHBA is not set
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -10742,6 +10758,8 @@ CONFIG_XILLYBUS_PCIE=m
 CONFIG_XILLYUSB=m
 CONFIG_XLNX_EVENT_MANAGER=y
 CONFIG_XLNX_R5_REMOTEPROC=m
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -10763,6 +10781,7 @@ CONFIG_Z3FOLD=y
 CONFIG_ZBUD=y
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_ZD1211RW=m
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 CONFIG_ZEROPLUS_FF=y
 # CONFIG_ZIIRAVE_WATCHDOG is not set
