--- a/kernel-s390x-debug-fedora.config
+++ b/kernel-s390x-debug-fedora.config
@@ -423,6 +423,8 @@ CONFIG_AX25_DAMA_SLAVE=y
 CONFIG_AX25=m
 CONFIG_AX88796B_PHY=m
 CONFIG_AX88796B_RUST_PHY=y
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 CONFIG_B43_BCMA_PIO=y
 CONFIG_B43_BCMA=y
 CONFIG_B43_BUSES_BCMA_AND_SSB=y
@@ -626,6 +628,7 @@ CONFIG_BME680=m
 # CONFIG_BMI088_ACCEL is not set
 CONFIG_BMI160_I2C=m
 CONFIG_BMI160_SPI=m
+# CONFIG_BMI260 is not set
 CONFIG_BMI270_I2C=m
 CONFIG_BMI270_SPI=m
 # CONFIG_BMI323_I2C is not set
@@ -1571,6 +1574,7 @@ CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -2051,6 +2055,7 @@ CONFIG_F2FS_FS_ZSTD=y
 CONFIG_F2FS_IOSTAT=y
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
+# CONFIG_FACETIMEHD is not set
 CONFIG_FAIL_FUNCTION=y
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAIL_IO_TIMEOUT=y
@@ -2254,6 +2259,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 CONFIG_FXAS21002C=m
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2266,6 +2272,7 @@ CONFIG_GAMEPORT_FM801=m
 # CONFIG_GAMEPORT is not set
 CONFIG_GAMEPORT_L4=m
 CONFIG_GAMEPORT_NS558=m
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -2296,6 +2303,7 @@ CONFIG_GNSS_USB=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
 # CONFIG_GPIO_ADNP is not set
@@ -3395,6 +3403,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 # CONFIG_KUNIT_FAULT_TEST is not set
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
+# CONFIG_KVFM is not set
 CONFIG_KVM=m
 CONFIG_KVM_MAX_NR_VCPUS=4096
 CONFIG_KVM_PROVE_MMU=y
@@ -3530,6 +3539,7 @@ CONFIG_LEDS_USER=m
 CONFIG_LED_TRIGGER_PHY=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_LEGACY_TIOCSTI is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
 CONFIG_LIBERTAS_THINFIRM=m
@@ -4274,6 +4284,7 @@ CONFIG_NATSEMI=m
 CONFIG_NCN26000_PHY=m
 CONFIG_NCSI_OEM_CMD_GET_MAC=y
 CONFIG_NCSI_OEM_CMD_KEEP_PHY=y
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5465,6 +5476,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
 # CONFIG_RAVE_SP_CORE is not set
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_CORE=y
@@ -5891,6 +5903,8 @@ CONFIG_S390_TAPE=m
 # CONFIG_S390_UNWIND_SELFTEST is not set
 CONFIG_S390_UV_UAPI=m
 CONFIG_S390_VMUR=m
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 # CONFIG_SAMPLE_FPROBE is not set
 # CONFIG_SAMPLES is not set
 CONFIG_SATA_ACARD_AHCI=m
@@ -8198,6 +8212,7 @@ CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 # CONFIG_UV_SYSFS is not set
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
+# CONFIG_V4L2LOOP is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_V4L_TEST_DRIVERS=y
@@ -8237,6 +8252,7 @@ CONFIG_VFIO_PCI_ZDEV_KVM=y
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
+# CONFIG_VHBA is not set
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8719,6 +8735,8 @@ CONFIG_XILINX_XDMA=m
 # CONFIG_XILLYBUS_OF is not set
 CONFIG_XILLYBUS_PCIE=m
 CONFIG_XILLYUSB=m
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8742,6 +8760,7 @@ CONFIG_ZCRYPT=m
 CONFIG_ZCRYPT_MULTIDEVNODES=y
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_ZD1211RW=m
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 CONFIG_ZEROPLUS_FF=y
 CONFIG_ZFCP=m
