--- a/kernel-s390x-zfcpdump-rhel.config
+++ b/kernel-s390x-zfcpdump-rhel.config
@@ -374,6 +374,8 @@ CONFIG_AUDIT_ARCH=y
 # CONFIG_AW96103 is not set
 CONFIG_AX88796B_PHY=m
 # CONFIG_AX88796B_RUST_PHY is not set
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_B44 is not set
@@ -515,6 +517,7 @@ CONFIG_BLOCK=y
 # CONFIG_BMI088_ACCEL is not set
 # CONFIG_BMI160_I2C is not set
 # CONFIG_BMI160_SPI is not set
+# CONFIG_BMI260 is not set
 # CONFIG_BMI270_I2C is not set
 # CONFIG_BMI270_SPI is not set
 # CONFIG_BMI323_I2C is not set
@@ -1402,6 +1405,7 @@ CONFIG_DRM_CLIENT_DEFAULT_FBDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -1792,6 +1796,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_EZX_PCAP is not set
 # CONFIG_F2FS_FS is not set
 # CONFIG_F71808E_WDT is not set
+# CONFIG_FACETIMEHD is not set
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAILOVER=y
 # CONFIG_FAIL_SKB_REALLOC is not set
@@ -1965,6 +1970,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 # CONFIG_FXAS21002C is not set
 # CONFIG_FXLS8962AF_I2C is not set
@@ -1974,6 +1980,7 @@ CONFIG_FW_UPLOAD=y
 CONFIG_GACT_PROB=y
 # CONFIG_GAMEPORT is not set
 # CONFIG_GART_IOMMU is not set
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -2007,6 +2014,7 @@ CONFIG_GLOB=y
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -3054,6 +3062,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 # CONFIG_KUNIT is not set
 CONFIG_KUNIT_TEST=m
 # CONFIG_KUNPENG_HCCS is not set
+# CONFIG_KVFM is not set
 CONFIG_KVM_IOAPIC=y
 # CONFIG_KVM is not set
 CONFIG_KVM_MAX_NR_VCPUS=4096
@@ -3180,6 +3189,7 @@ CONFIG_LEGACY_TIOCSTI=y
 # CONFIG_LENOVO_WMI_HOTKEY_UTILITIES is not set
 # CONFIG_LENOVO_WMI_TUNING is not set
 # CONFIG_LENOVO_YMC is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LG_LAPTOP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM is not set
@@ -3904,6 +3914,7 @@ CONFIG_NAMESPACES=y
 # CONFIG_NATIONAL_PHY is not set
 # CONFIG_NAU7802 is not set
 # CONFIG_NCN26000_PHY is not set
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5018,6 +5029,7 @@ CONFIG_RAS_FMPM=m
 # CONFIG_RAS is not set
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 # CONFIG_RC_CORE is not set
@@ -5390,6 +5402,8 @@ CONFIG_S390_TAPE_3590=m
 # CONFIG_S390_UV_UAPI is not set
 CONFIG_S390_VMUR=y
 CONFIG_S390=y
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 # CONFIG_SA_CAMCC_8775P is not set
 # CONFIG_SA_DISPCC_8775P is not set
 # CONFIG_SAMPLE_ANDROID_BINDERFS is not set
@@ -7564,6 +7578,7 @@ CONFIG_USER_NS=y
 CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 CONFIG_UV_SYSFS=m
+# CONFIG_V4L2LOOP is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_VALIDATE_FS_PARSER is not set
@@ -7605,6 +7620,7 @@ CONFIG_VGA_ARB_MAX_GPUS=64
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
 # CONFIG_VGA_SWITCHEROO is not set
+# CONFIG_VHBA is not set
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8015,6 +8031,8 @@ CONFIG_XILINX_GMII2RGMII=m
 # CONFIG_XILLYBUS is not set
 # CONFIG_XILLYUSB is not set
 CONFIG_XMON_DEFAULT_RO_MODE=y
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8036,6 +8054,7 @@ CONFIG_XZ_DEC=y
 # CONFIG_ZBUD is not set
 # CONFIG_ZCRYPT is not set
 CONFIG_ZCRYPT_MULTIDEVNODES=y
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # CONFIG_ZEROPLUS_FF is not set
 CONFIG_ZFCP=y
