--- a/kernel-x86_64-rt-debug-rhel.config
+++ b/kernel-x86_64-rt-debug-rhel.config
@@ -407,6 +407,8 @@ CONFIG_AUTOFS_FS=y
 CONFIG_AX88796B_PHY=m
 # CONFIG_AX88796B_RUST_PHY is not set
 CONFIG_AYANEO_EC=m
+CONFIG_AYANEO=m
+CONFIG_AYN=m
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_B44 is not set
@@ -549,6 +551,7 @@ CONFIG_BLOCK=y
 # CONFIG_BMI088_ACCEL is not set
 # CONFIG_BMI160_I2C is not set
 # CONFIG_BMI160_SPI is not set
+CONFIG_BMI260=m
 # CONFIG_BMI270_I2C is not set
 # CONFIG_BMI270_SPI is not set
 # CONFIG_BMI323_I2C is not set
@@ -1494,6 +1497,8 @@ CONFIG_DRM_CLIENT_DEFAULT_FBDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI_KUNIT_TEST is not set
+CONFIG_DRM_EVDI=m
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -1959,6 +1964,7 @@ CONFIG_ETHERNET=y
 CONFIG_ETHOC=m
 CONFIG_ETHTOOL_NETLINK=y
 # CONFIG_EUROTECH_WDT is not set
+CONFIG_EVDI=m
 CONFIG_EVENT_TRACING=y
 # CONFIG_EVM_ADD_XATTRS is not set
 CONFIG_EVM_ATTR_FSUUID=y
@@ -1997,6 +2003,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_EZX_PCAP is not set
 # CONFIG_F2FS_FS is not set
 # CONFIG_F71808E_WDT is not set
+CONFIG_FACETIMEHD=m
 # CONFIG_FAIL_FUNCTION is not set
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAIL_IO_TIMEOUT=y
@@ -2182,6 +2189,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+CONFIG_FWOOT=m
 CONFIG_FW_UPLOAD=y
 # CONFIG_FXAS21002C is not set
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2193,6 +2201,7 @@ CONFIG_GACT_PROB=y
 # CONFIG_GAMEPORT_FM801 is not set
 CONFIG_GAMEPORT=y
 # CONFIG_GART_IOMMU is not set
+CONFIG_GCAOC=m
 # CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
@@ -2226,6 +2235,7 @@ CONFIG_GNSS=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
+CONFIG_GPDFAN=m
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -3366,6 +3376,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
 # CONFIG_KUNPENG_HCCS is not set
+CONFIG_KVFM=m
 CONFIG_KVM_AMD=m
 CONFIG_KVM_AMD_SEV=y
 CONFIG_KVM_GUEST=y
@@ -3504,6 +3515,7 @@ CONFIG_LEGION_LAPTOP=m
 # CONFIG_LENOVO_WMI_HOTKEY_UTILITIES is not set
 # CONFIG_LENOVO_WMI_TUNING is not set
 # CONFIG_LENOVO_YMC is not set
+CONFIG_LG4FF=m
 # CONFIG_LG_LAPTOP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM is not set
@@ -4263,6 +4275,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NATIONAL_PHY=m
 # CONFIG_NAU7802 is not set
 # CONFIG_NCN26000_PHY is not set
+CONFIG_NCT6687D=m
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5416,6 +5429,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RAS=y
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
+CONFIG_RAZER=m
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 # CONFIG_RC_CORE is not set
@@ -5794,6 +5808,8 @@ CONFIG_RV=y
 CONFIG_RXGK=y
 CONFIG_RXKAD=y
 CONFIG_RXPERF=m
+CONFIG_S76IO=m
+CONFIG_S76=m
 # CONFIG_SA_CAMCC_8775P is not set
 # CONFIG_SA_DISPCC_8775P is not set
 # CONFIG_SAMPLE_ANDROID_BINDERFS is not set
@@ -8115,6 +8131,7 @@ CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 CONFIG_UV_MMTIMER=m
 CONFIG_UV_SYSFS=m
+CONFIG_V4L2LOOP=m
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_VALIDATE_FS_PARSER is not set
@@ -8154,6 +8171,7 @@ CONFIG_VGA_ARB_MAX_GPUS=64
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
 CONFIG_VGA_SWITCHEROO=y
+CONFIG_VHBA=m
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8651,6 +8669,8 @@ CONFIG_XILINX_GMII2RGMII=m
 # CONFIG_XILLYBUS is not set
 # CONFIG_XILLYUSB is not set
 CONFIG_XMON_DEFAULT_RO_MODE=y
+CONFIG_XONEDO=m
+CONFIG_XPADNEO=m
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8675,6 +8695,7 @@ CONFIG_YENTA_TOSHIBA=y
 # CONFIG_Z3FOLD_DEPRECATED is not set
 CONFIG_Z3FOLD=y
 CONFIG_ZBUD=y
+CONFIG_ZENERGY=m
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # CONFIG_ZEROPLUS_FF is not set
 # CONFIG_ZIIRAVE_WATCHDOG is not set
