--- a/kernel-aarch64-64k-debug-rhel.config
+++ b/kernel-aarch64-64k-debug-rhel.config
@@ -566,6 +566,8 @@ CONFIG_AUTOFS_FS=y
 # CONFIG_AW96103 is not set
 CONFIG_AX88796B_PHY=m
 # CONFIG_AX88796B_RUST_PHY is not set
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_B44 is not set
@@ -714,6 +716,7 @@ CONFIG_BLOCK=y
 # CONFIG_BMI088_ACCEL is not set
 # CONFIG_BMI160_I2C is not set
 # CONFIG_BMI160_SPI is not set
+# CONFIG_BMI260 is not set
 # CONFIG_BMI270_I2C is not set
 # CONFIG_BMI270_SPI is not set
 # CONFIG_BMI323_I2C is not set
@@ -1684,6 +1687,7 @@ CONFIG_DRM_CLIENT_DEFAULT_FBDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -2093,6 +2097,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_EZX_PCAP is not set
 # CONFIG_F2FS_FS is not set
 # CONFIG_F71808E_WDT is not set
+# CONFIG_FACETIMEHD is not set
 # CONFIG_FAIL_FUNCTION is not set
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAIL_IO_TIMEOUT=y
@@ -2295,6 +2300,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 # CONFIG_FXAS21002C is not set
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2306,6 +2312,7 @@ CONFIG_GAMEPORT_EMU10K1=m
 CONFIG_GAMEPORT_FM801=m
 CONFIG_GAMEPORT=m
 # CONFIG_GART_IOMMU is not set
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -2341,6 +2348,7 @@ CONFIG_GNSS=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -3499,6 +3507,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
 # CONFIG_KUNPENG_HCCS is not set
+# CONFIG_KVFM is not set
 CONFIG_KVM_IOAPIC=y
 CONFIG_KVM_MAX_NR_VCPUS=4096
 CONFIG_KVM_PROVE_MMU=y
@@ -3625,6 +3634,7 @@ CONFIG_LEGACY_TIOCSTI=y
 # CONFIG_LENOVO_WMI_HOTKEY_UTILITIES is not set
 # CONFIG_LENOVO_WMI_TUNING is not set
 # CONFIG_LENOVO_YMC is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LG_LAPTOP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM is not set
@@ -4379,6 +4389,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NATIONAL_PHY=m
 # CONFIG_NAU7802 is not set
 # CONFIG_NCN26000_PHY is not set
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5610,6 +5621,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RAS=y
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 # CONFIG_RC_CORE is not set
@@ -6015,6 +6027,8 @@ CONFIG_RV=y
 CONFIG_RXGK=y
 CONFIG_RXKAD=y
 CONFIG_RXPERF=m
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 # CONFIG_SA_CAMCC_8775P is not set
 # CONFIG_SA_DISPCC_8775P is not set
 # CONFIG_SAMPLE_CGROUP is not set
@@ -8227,6 +8241,7 @@ CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 CONFIG_UV_SYSFS=m
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
+# CONFIG_V4L2LOOP is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_VALIDATE_FS_PARSER is not set
@@ -8268,6 +8283,7 @@ CONFIG_VGA_ARB_MAX_GPUS=64
 CONFIG_VGA_ARB=y
 # CONFIG_VGA_CONSOLE is not set
 # CONFIG_VGA_SWITCHEROO is not set
+# CONFIG_VHBA is not set
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8688,6 +8704,8 @@ CONFIG_XILINX_GMII2RGMII=m
 # CONFIG_XILLYBUS is not set
 # CONFIG_XILLYUSB is not set
 CONFIG_XMON_DEFAULT_RO_MODE=y
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8707,6 +8725,7 @@ CONFIG_XZ_DEC=y
 # CONFIG_Z3FOLD_DEPRECATED is not set
 # CONFIG_Z3FOLD is not set
 CONFIG_ZBUD=y
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # CONFIG_ZEROPLUS_FF is not set
 # CONFIG_ZIIRAVE_WATCHDOG is not set
