--- a/kernel-ppc64le-fedora.config
+++ b/kernel-ppc64le-fedora.config
@@ -417,6 +417,8 @@ CONFIG_AX25_DAMA_SLAVE=y
 CONFIG_AX25=m
 CONFIG_AX88796B_PHY=m
 CONFIG_AX88796B_RUST_PHY=y
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 CONFIG_B43_BCMA_PIO=y
 CONFIG_B43_BCMA=y
 CONFIG_B43_BUSES_BCMA_AND_SSB=y
@@ -620,6 +622,7 @@ CONFIG_BME680=m
 # CONFIG_BMI088_ACCEL is not set
 CONFIG_BMI160_I2C=m
 CONFIG_BMI160_SPI=m
+# CONFIG_BMI260 is not set
 CONFIG_BMI270_I2C=m
 CONFIG_BMI270_SPI=m
 # CONFIG_BMI323_I2C is not set
@@ -1549,6 +1552,7 @@ CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -2030,6 +2034,7 @@ CONFIG_F2FS_FS_ZSTD=y
 CONFIG_F2FS_IOSTAT=y
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
+# CONFIG_FACETIMEHD is not set
 CONFIG_FA_DUMP=y
 # CONFIG_FAIL_FUTEX is not set
 # CONFIG_FAIL_IOMMU is not set
@@ -2237,6 +2242,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 CONFIG_FXAS21002C=m
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2249,6 +2255,7 @@ CONFIG_GAMEPORT_FM801=m
 CONFIG_GAMEPORT_L4=m
 CONFIG_GAMEPORT=m
 CONFIG_GAMEPORT_NS558=m
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -2279,6 +2286,7 @@ CONFIG_GNSS_USB=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
@@ -3390,6 +3398,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 # CONFIG_KUNIT_FAULT_TEST is not set
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
+# CONFIG_KVFM is not set
 CONFIG_KVM_BOOK3S_64_HV=m
 CONFIG_KVM_BOOK3S_64=m
 CONFIG_KVM_BOOK3S_64_PR=m
@@ -3534,6 +3543,7 @@ CONFIG_LEDS_USER=m
 CONFIG_LED_TRIGGER_PHY=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_LEGACY_TIOCSTI is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
 CONFIG_LIBERTAS_THINFIRM=m
@@ -4269,6 +4279,7 @@ CONFIG_NATSEMI=m
 CONFIG_NCN26000_PHY=m
 CONFIG_NCSI_OEM_CMD_GET_MAC=y
 CONFIG_NCSI_OEM_CMD_KEEP_PHY=y
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5499,6 +5510,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
 # CONFIG_RAVE_SP_CORE is not set
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_CORE=y
@@ -5916,6 +5928,8 @@ CONFIG_RXGK=y
 CONFIG_RXKAD=y
 # CONFIG_RXPERF is not set
 CONFIG_S2IO=m
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 # CONFIG_SAMPLE_FPROBE is not set
 # CONFIG_SAMPLES is not set
 CONFIG_SATA_ACARD_AHCI=m
@@ -8212,6 +8226,7 @@ CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 # CONFIG_UV_SYSFS is not set
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
+# CONFIG_V4L2LOOP is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_V4L_TEST_DRIVERS=y
@@ -8248,6 +8263,7 @@ CONFIG_VFIO_PCI=m
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
+# CONFIG_VHBA is not set
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8735,6 +8751,8 @@ CONFIG_XILLYUSB=m
 CONFIG_XMON_DEFAULT_RO_MODE=y
 CONFIG_XMON_DISASSEMBLY=y
 CONFIG_XMON=y
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8756,6 +8774,7 @@ CONFIG_Z3FOLD=y
 CONFIG_ZBUD=y
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_ZD1211RW=m
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 CONFIG_ZEROPLUS_FF=y
 # CONFIG_ZIIRAVE_WATCHDOG is not set
