--- a/kernel-ppc64le-rhel.config
+++ b/kernel-ppc64le-rhel.config
@@ -372,6 +372,8 @@ CONFIG_AUTOFS_FS=y
 # CONFIG_AW96103 is not set
 CONFIG_AX88796B_PHY=m
 # CONFIG_AX88796B_RUST_PHY is not set
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 # CONFIG_B43 is not set
 # CONFIG_B43LEGACY is not set
 # CONFIG_B44 is not set
@@ -513,6 +515,7 @@ CONFIG_BLOCK=y
 # CONFIG_BMI088_ACCEL is not set
 # CONFIG_BMI160_I2C is not set
 # CONFIG_BMI160_SPI is not set
+# CONFIG_BMI260 is not set
 # CONFIG_BMI270_I2C is not set
 # CONFIG_BMI270_SPI is not set
 # CONFIG_BMI323_I2C is not set
@@ -1394,6 +1397,7 @@ CONFIG_DRM_CLIENT_DEFAULT_FBDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -1780,6 +1784,7 @@ CONFIG_EXTRA_TARGETS=""
 # CONFIG_EZX_PCAP is not set
 # CONFIG_F2FS_FS is not set
 # CONFIG_F71808E_WDT is not set
+# CONFIG_FACETIMEHD is not set
 CONFIG_FA_DUMP=y
 # CONFIG_FAIL_FUTEX is not set
 # CONFIG_FAIL_IOMMU is not set
@@ -1956,6 +1961,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 # CONFIG_FXAS21002C is not set
 # CONFIG_FXLS8962AF_I2C is not set
@@ -1965,6 +1971,7 @@ CONFIG_FW_UPLOAD=y
 CONFIG_GACT_PROB=y
 # CONFIG_GAMEPORT is not set
 # CONFIG_GART_IOMMU is not set
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -1997,6 +2004,7 @@ CONFIG_GNSS=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 # CONFIG_GP2AP002 is not set
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPD_POCKET_FAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -3058,6 +3066,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
 # CONFIG_KUNPENG_HCCS is not set
+# CONFIG_KVFM is not set
 CONFIG_KVM_BOOK3S_64_HV=m
 CONFIG_KVM_BOOK3S_64=m
 # CONFIG_KVM_BOOK3S_64_PR is not set
@@ -3194,6 +3203,7 @@ CONFIG_LEGACY_TIOCSTI=y
 # CONFIG_LENOVO_WMI_HOTKEY_UTILITIES is not set
 # CONFIG_LENOVO_WMI_TUNING is not set
 # CONFIG_LENOVO_YMC is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LG_LAPTOP is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM is not set
@@ -3912,6 +3922,7 @@ CONFIG_NAMESPACES=y
 CONFIG_NATIONAL_PHY=m
 # CONFIG_NAU7802 is not set
 # CONFIG_NCN26000_PHY is not set
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5061,6 +5072,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RAS=y
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 # CONFIG_RC_CORE is not set
@@ -5424,6 +5436,8 @@ CONFIG_RV=y
 CONFIG_RXGK=y
 CONFIG_RXKAD=y
 CONFIG_RXPERF=m
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 # CONFIG_SA_CAMCC_8775P is not set
 # CONFIG_SA_DISPCC_8775P is not set
 # CONFIG_SAMPLE_CGROUP is not set
@@ -7554,6 +7568,7 @@ CONFIG_USER_NS=y
 CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 CONFIG_UV_SYSFS=m
+# CONFIG_V4L2LOOP is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 # CONFIG_VALIDATE_FS_PARSER is not set
@@ -7592,6 +7607,7 @@ CONFIG_VGA_ARB_MAX_GPUS=64
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
 # CONFIG_VGA_SWITCHEROO is not set
+# CONFIG_VHBA is not set
 CONFIG_VHOST_CROSS_ENDIAN_LEGACY=y
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8004,6 +8020,8 @@ CONFIG_XILINX_GMII2RGMII=m
 CONFIG_XMON_DEFAULT_RO_MODE=y
 CONFIG_XMON_DISASSEMBLY=y
 CONFIG_XMON=y
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8023,6 +8041,7 @@ CONFIG_XZ_DEC=y
 # CONFIG_Z3FOLD_DEPRECATED is not set
 # CONFIG_Z3FOLD is not set
 CONFIG_ZBUD=y
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 # CONFIG_ZEROPLUS_FF is not set
 # CONFIG_ZIIRAVE_WATCHDOG is not set
