--- a/kernel-riscv64-fedora.config
+++ b/kernel-riscv64-fedora.config
@@ -440,6 +440,8 @@ CONFIG_AX88796B_RUST_PHY=y
 CONFIG_AXP20X_ADC=m
 CONFIG_AXP20X_POWER=m
 CONFIG_AXP288_ADC=m
+# CONFIG_AYANEO is not set
+# CONFIG_AYN is not set
 CONFIG_B43_BCMA_PIO=y
 CONFIG_B43_BCMA=y
 CONFIG_B43_BUSES_BCMA_AND_SSB=y
@@ -644,6 +646,7 @@ CONFIG_BME680=m
 # CONFIG_BMI088_ACCEL is not set
 CONFIG_BMI160_I2C=m
 CONFIG_BMI160_SPI=m
+# CONFIG_BMI260 is not set
 CONFIG_BMI270_I2C=m
 CONFIG_BMI270_SPI=m
 # CONFIG_BMI323_I2C is not set
@@ -1583,6 +1586,7 @@ CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI is not set
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -2080,6 +2084,7 @@ CONFIG_F2FS_FS_ZSTD=y
 CONFIG_F2FS_IOSTAT=y
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
+# CONFIG_FACETIMEHD is not set
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAILOVER=m
 # CONFIG_FAIL_SUNRPC is not set
@@ -2278,6 +2283,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+# CONFIG_FWOOT is not set
 CONFIG_FW_UPLOAD=y
 CONFIG_FXAS21002C=m
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2290,6 +2296,7 @@ CONFIG_GAMEPORT_FM801=m
 CONFIG_GAMEPORT_L4=m
 CONFIG_GAMEPORT=m
 CONFIG_GAMEPORT_NS558=m
+# CONFIG_GCAOC is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGINS is not set
@@ -2322,6 +2329,7 @@ CONFIG_GOLDFISH=y
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
+# CONFIG_GPDFAN is not set
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
@@ -3415,6 +3423,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 # CONFIG_KUNIT_FAULT_TEST is not set
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
+# CONFIG_KVFM is not set
 CONFIG_KVM_MAX_NR_VCPUS=4096
 # CONFIG_KVM_PROVE_MMU is not set
 CONFIG_KVM_SMM=y
@@ -3549,6 +3558,7 @@ CONFIG_LEDS_USER=m
 CONFIG_LED_TRIGGER_PHY=y
 # CONFIG_LEGACY_PTYS is not set
 # CONFIG_LEGACY_TIOCSTI is not set
+# CONFIG_LG4FF is not set
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
 CONFIG_LIBERTAS_THINFIRM=m
@@ -4300,6 +4310,7 @@ CONFIG_NATSEMI=m
 CONFIG_NCN26000_PHY=m
 CONFIG_NCSI_OEM_CMD_GET_MAC=y
 CONFIG_NCSI_OEM_CMD_KEEP_PHY=y
+# CONFIG_NCT6687D is not set
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -5525,6 +5536,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
 # CONFIG_RAVE_SP_CORE is not set
+# CONFIG_RAZER is not set
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_CORE=y
@@ -6000,6 +6012,8 @@ CONFIG_RXGK=y
 CONFIG_RXKAD=y
 # CONFIG_RXPERF is not set
 CONFIG_S2IO=m
+# CONFIG_S76IO is not set
+# CONFIG_S76 is not set
 # CONFIG_SAMPLE_FPROBE is not set
 # CONFIG_SAMPLES is not set
 CONFIG_SATA_ACARD_AHCI=m
@@ -8374,6 +8388,7 @@ CONFIG_UTIL_MACROS_KUNIT=m
 CONFIG_UTS_NS=y
 # CONFIG_UV_SYSFS is not set
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
+# CONFIG_V4L2LOOP is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_V4L_TEST_DRIVERS=y
@@ -8410,6 +8425,7 @@ CONFIG_VFIO_PCI=m
 CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
+# CONFIG_VHBA is not set
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -8890,6 +8906,8 @@ CONFIG_XILLYBUS=m
 CONFIG_XILLYBUS_PCIE=m
 CONFIG_XILLYUSB=m
 # CONFIG_XIP_KERNEL is not set
+# CONFIG_XONEDO is not set
+# CONFIG_XPADNEO is not set
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
 CONFIG_XZ_DEC_ARM=y
@@ -8911,6 +8929,7 @@ CONFIG_Z3FOLD=y
 CONFIG_ZBUD=y
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_ZD1211RW=m
+# CONFIG_ZENERGY is not set
 # CONFIG_ZERO_CALL_USED_REGS is not set
 CONFIG_ZEROPLUS_FF=y
 # CONFIG_ZIIRAVE_WATCHDOG is not set
