--- a/kernel-x86_64-rt-debug-fedora.config
+++ b/kernel-x86_64-rt-debug-fedora.config
@@ -484,6 +484,8 @@ CONFIG_AXP288_ADC=m
 CONFIG_AXP288_CHARGER=m
 CONFIG_AXP288_FUEL_GAUGE=m
 CONFIG_AYANEO_EC=m
+CONFIG_AYANEO=m
+CONFIG_AYN=m
 CONFIG_B43_BCMA_PIO=y
 CONFIG_B43_BCMA=y
 CONFIG_B43_BUSES_BCMA_AND_SSB=y
@@ -693,6 +695,7 @@ CONFIG_BMG160_SPI=m
 # CONFIG_BMI088_ACCEL is not set
 CONFIG_BMI160_I2C=m
 CONFIG_BMI160_SPI=m
+CONFIG_BMI260=m
 CONFIG_BMI270_I2C=m
 CONFIG_BMI270_SPI=m
 CONFIG_BMI323_I2C=m
@@ -1718,6 +1721,8 @@ CONFIG_DRM_DISPLAY_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_AUX_CHARDEV=y
 CONFIG_DRM_DP_CEC=y
 # CONFIG_DRM_ETNAVIV is not set
+# CONFIG_DRM_EVDI_KUNIT_TEST is not set
+CONFIG_DRM_EVDI=m
 CONFIG_DRM_FBDEV_EMULATION=y
 # CONFIG_DRM_FBDEV_LEAK_PHYS_SMEM is not set
 CONFIG_DRM_FBDEV_OVERALLOC=100
@@ -2216,6 +2221,7 @@ CONFIG_ETHERNET=y
 CONFIG_ETHOC=m
 CONFIG_ETHTOOL_NETLINK=y
 # CONFIG_EUROTECH_WDT is not set
+CONFIG_EVDI=m
 # CONFIG_EVM_ADD_XATTRS is not set
 CONFIG_EVM_ATTR_FSUUID=y
 # CONFIG_EVM_LOAD_X509 is not set
@@ -2269,6 +2275,7 @@ CONFIG_F2FS_IOSTAT=y
 CONFIG_F2FS_STAT_FS=y
 CONFIG_F2FS_UNFAIR_RWSEM=y
 CONFIG_F71808E_WDT=m
+CONFIG_FACETIMEHD=m
 CONFIG_FAIL_FUNCTION=y
 # CONFIG_FAIL_FUTEX is not set
 CONFIG_FAIL_IO_TIMEOUT=y
@@ -2484,6 +2491,7 @@ CONFIG_FW_LOADER_DEBUG=y
 # CONFIG_FW_LOADER_USER_HELPER_FALLBACK is not set
 # CONFIG_FW_LOADER_USER_HELPER is not set
 CONFIG_FW_LOADER=y
+CONFIG_FWOOT=m
 CONFIG_FW_UPLOAD=y
 CONFIG_FXAS21002C=m
 # CONFIG_FXLS8962AF_I2C is not set
@@ -2497,6 +2505,7 @@ CONFIG_GAMEPORT_L4=m
 CONFIG_GAMEPORT_NS558=m
 CONFIG_GAMEPORT=y
 # CONFIG_GART_IOMMU is not set
+CONFIG_GCAOC=m
 # CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
 # CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
@@ -2528,6 +2537,7 @@ CONFIG_GNSS_USB=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 CONFIG_GP2AP002=m
 # CONFIG_GP2AP020A00F is not set
+CONFIG_GPDFAN=m
 CONFIG_GPD_POCKET_FAN=m
 # CONFIG_GPIB is not set
 # CONFIG_GPIO_74X164 is not set
@@ -3785,6 +3795,7 @@ CONFIG_KUNIT_EXAMPLE_TEST=m
 # CONFIG_KUNIT_FAULT_TEST is not set
 CONFIG_KUNIT=m
 CONFIG_KUNIT_TEST=m
+CONFIG_KVFM=m
 CONFIG_KVM_AMD=m
 CONFIG_KVM_AMD_SEV=y
 CONFIG_KVM_GUEST=y
@@ -3945,6 +3956,7 @@ CONFIG_LENOVO_WMI_GAMEZONE=m
 CONFIG_LENOVO_WMI_HOTKEY_UTILITIES=m
 CONFIG_LENOVO_WMI_TUNING=m
 CONFIG_LENOVO_YMC=m
+CONFIG_LG4FF=m
 CONFIG_LG_LAPTOP=m
 # CONFIG_LIBERTAS is not set
 # CONFIG_LIBERTAS_THINFIRM_DEBUG is not set
@@ -4734,6 +4746,7 @@ CONFIG_NATSEMI=m
 CONFIG_NCN26000_PHY=m
 CONFIG_NCSI_OEM_CMD_GET_MAC=y
 CONFIG_NCSI_OEM_CMD_KEEP_PHY=y
+CONFIG_NCT6687D=m
 # CONFIG_NCT7201 is not set
 # CONFIG_ND_BTT is not set
 # CONFIG_NDC_DIS_DYNAMIC_CACHING is not set
@@ -6008,6 +6021,7 @@ CONFIG_RAS_FMPM=m
 CONFIG_RATELIMIT_KUNIT_TEST=m
 CONFIG_RATIONAL_KUNIT_TEST=m
 # CONFIG_RAVE_SP_CORE is not set
+CONFIG_RAZER=m
 # CONFIG_RBTREE_TEST is not set
 CONFIG_RC_ATI_REMOTE=m
 CONFIG_RC_CORE=y
@@ -6431,6 +6445,8 @@ CONFIG_RXGK=y
 CONFIG_RXKAD=y
 # CONFIG_RXPERF is not set
 CONFIG_S2IO=m
+CONFIG_S76IO=m
+CONFIG_S76=m
 # CONFIG_SAMPLE_FPROBE is not set
 # CONFIG_SAMPLES is not set
 CONFIG_SAMSUNG_GALAXYBOOK=m
@@ -8920,6 +8936,7 @@ CONFIG_UTS_NS=y
 CONFIG_UV_MMTIMER=m
 # CONFIG_UV_SYSFS is not set
 # CONFIG_V4L2_FLASH_LED_CLASS is not set
+CONFIG_V4L2LOOP=m
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
 CONFIG_V4L_TEST_DRIVERS=y
@@ -8961,6 +8978,7 @@ CONFIG_VGA_ARB_MAX_GPUS=16
 CONFIG_VGA_ARB=y
 CONFIG_VGA_CONSOLE=y
 CONFIG_VGA_SWITCHEROO=y
+CONFIG_VHBA=m
 # CONFIG_VHOST_CROSS_ENDIAN_LEGACY is not set
 CONFIG_VHOST_ENABLE_FORK_OWNER_CONTROL=y
 CONFIG_VHOST_MENU=y
@@ -9557,6 +9575,8 @@ CONFIG_XILLYBUS=m
 CONFIG_XILLYBUS_PCIE=m
 CONFIG_XILLYUSB=m
 # CONFIG_XO15_EBOOK is not set
+CONFIG_XONEDO=m
+CONFIG_XPADNEO=m
 CONFIG_XPOWER_PMIC_OPREGION=y
 CONFIG_XZ_DEC_ARM64=y
 CONFIG_XZ_DEC_ARMTHUMB=y
@@ -9586,6 +9606,7 @@ CONFIG_Z3FOLD=y
 CONFIG_ZBUD=y
 # CONFIG_ZD1211RW_DEBUG is not set
 CONFIG_ZD1211RW=m
+CONFIG_ZENERGY=m
 # CONFIG_ZERO_CALL_USED_REGS is not set
 CONFIG_ZEROPLUS_FF=y
 # CONFIG_ZIIRAVE_WATCHDOG is not set
