download nvidia modules for action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,9 +54,18 @@ jobs:
         run: |
           # Get the tarfile_release value from the spec file and download it
           TARFILE_RELEASE=$(sed -n 's/^%define[[:space:]]\+tarfile_release[[:space:]]\+//p' kernel.spec)
-          TARFILE_RELEASE=$(sed -n 's/^%define[[:space:]]\+tarfile_release[[:space:]]\+//p' kernel.spec)
+          NVIDIA_RELEASE=$(sed -n 's/^%define[[:space:]]\+nvidia_version[[:space:]]\+//p' kernel.spec)
+          NVIDIA_RELEASE_LTS=$(sed -n 's/^%define[[:space:]]\+nvidia_version_lts[[:space:]]\+//p' kernel.spec)
+
           echo "TARFILE_RELEASE is $TARFILE_RELEASE"
+          echo "NVIDIA_RELEASE is $NVIDIA_RELEASE"
+          echo "NVIDIA_RELEASE_LTS is $NVIDIA_RELEASE_LTS"
+          
           curl -L -o "linux-${TARFILE_RELEASE}.tar.xz" "https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${TARFILE_RELEASE}.tar.xz"
+          curl -L -o "NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run" \
+            "https://us.download.nvidia.com/XFree86/Linux-${{ matrix.arch }}/${NVIDIA_RELEASE}/NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run"
+          curl -L -o "NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run" \
+            "https://us.download.nvidia.com/XFree86/Linux-${{ matrix.arch }}/${NVIDIA_RELEASE_LTS}/NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE_LTS}.run"
       
       - name: Compile Kernel
         run: |
