--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,7 +82,7 @@ jobs:
             --env CCACHE_COMPRESS=1 \
             fedora_builder fedpkg \
             --name kernel --namespace rpms --release "f${FEDORA_VERSION:-41}" \
-            local --arch ${ARCH:-x86_64} --with bazzite --with nvidia \
+            local --arch ${ARCH:-x86_64} --with bazzite --with nvidia --with zfs \
             --builddir build --buildrootdir buildroot
       
       - name: Print ccache stats
