--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,8 @@ jobs:
             fedora_builder fedpkg \
             --name kernel --namespace rpms --release "f${FEDORA_VERSION:-41}" \
             local --arch ${ARCH:-x86_64} --with bazzite --with nvidia --with zfs \
-            --builddir build --buildrootdir buildroot
+            --builddir build --buildrootdir buildroot \
+             | grep -v "nvidia.o: warning: objtool:"
       
       - name: Print ccache stats
         if: ${{ !startsWith(github.ref, 'refs/tags/') }}
