--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,9 @@ on:
         default: false
   release:
     types: [published]
+  push:
+    branches:
+      - bazzite-*
 
 permissions:
   contents: write
