Revert "switch to faster optimization action"
This reverts commit 2ebbbea2c8ccc6ccd4be0359161a3dc5a58e387f.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,23 +30,8 @@ jobs:
     runs-on: ${{ matrix.arch == 'aarch64' && 'ubuntu-24.04-arm' || 'ubuntu-24.04' }}
 
     steps:
-      - name: Optimize build times
-        shell: bash
-        run: |
-          echo 'set man-db/auto-update false' | sudo debconf-communicate
-          sudo dpkg-reconfigure man-db
-          sudo rm -f /var/lib/man-db/auto-update
-          sudo sed -i 's/^update_initramfs=.*/update_initramfs=no/' /etc/initramfs-tools/update-initramfs.conf
-
-      - name: Free disk space
-        shell: bash
-        run: |
-          sudo rm -rf /usr/share/dotnet || true
-          sudo rm -rf /opt/ghc || true
-          sudo rm -rf /usr/local/.ghcup || true
-          sudo docker image prune --all --force || true
-          sudo swapoff -a || true
-          sudo rm -f /mnt/swapfile || true
+      - name: Maximize build space
+        uses: ublue-os/remove-unwanted-software@v9
 
       - name: Checkout repository
         uses: actions/checkout@v4
