use global mirror

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,11 +58,11 @@ jobs:
 
           curl -L -o "linux-${TARFILE_RELEASE}.tar.xz" "https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-${TARFILE_RELEASE}.tar.xz"
           curl -L -o "NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run" \
-            "https://us.download.nvidia.com/XFree86/Linux-${{ matrix.arch }}/${NVIDIA_RELEASE}/NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run"
+            "https://download.nvidia.com/XFree86/Linux-${{ matrix.arch }}/${NVIDIA_RELEASE}/NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run"
           if [ "$NVIDIA_RELEASE" != "$NVIDIA_RELEASE_LTS" ]; then
             echo "Also downloading LTS version of NVIDIA driver $NVIDIA_RELEASE_LTS"
             curl -L -o "NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE}.run" \
-              "https://us.download.nvidia.com/XFree86/Linux-${{ matrix.arch }}/${NVIDIA_RELEASE_LTS}/NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE_LTS}.run"
+              "https://download.nvidia.com/XFree86/Linux-${{ matrix.arch }}/${NVIDIA_RELEASE_LTS}/NVIDIA-Linux-${{ matrix.arch }}-${NVIDIA_RELEASE_LTS}.run"
           fi
           curl -L -o "zfs-${ZFS_RELEASE}.tar.gz" \
             "https://github.com/openzfs/zfs/releases/download/zfs-${ZFS_RELEASE}/zfs-${ZFS_RELEASE}.tar.gz"
